# wasm-pfc

./: Cargo.toml  README.md
examples/: pfc.rs  simple.rs
examples/parallelization/: main.rs
src/: flow_mapper.rs  lib.rs  operators_validator.rs  parallelize.rs  parser.rs  validator.rs
tests/parallelization/: accel.wasm  chromatic.wasm  math.wasm  math.wat  test.wasm  test.wat
tests/pfc/: accel.wat
