[package]
name = "wasmparser"
version = "0.30.0"
authors = ["Yury Delendik <ydelendik@mozilla.com>"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/yurydelendik/wasmparser.rs"
keywords = ["parser", "WebAssembly", "wasm"]
description = """
autoexamples = false
A simple event-driven library for parsing WebAssembly binary files.
"""
exclude = ["fuzz/**/*", "tests/**/*"]

[dependencies]
bit-vec = "*"
termcolor = "*"

[dev-dependencies]
criterion = "0.2"
bit-vec = "*"
termcolor = "*"

[dependencies.hashmap_core]
version = "0.1.10"
optional = true

[badges]
travis-ci = { repository = "yurydelendik/wasmparser.rs" }

[features]
# The "std" feature enables use of libstd. The "core" feature enables use
# of some minimal std-like replacement libraries. At least one of these two
# features needs to be enabled.
default = ["std"]
std = []
core = ["hashmap_core"]

[[bench]]
name = "benchmark"
harness = false

[[example]]
name = "parallelize"
path = "examples/parallelization/main.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "dump"
path = "examples/dump.rs"
